fix close button on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -128,7 +128,7 @@ cursor: pointer;
 	.modal__close {
 		width: 26px;
 		height: 26px;
-		right: calc(100% - 30px);
+		left: calc(100% - 30px);
 		margin-bottom: 13px;
 	}
 
